# mdbc-api

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml
.github/workflows/: pipeline.yaml
alembic/: env.py
alembic/versions/: 094421a9b6db_removed_creator_name_fk.py  33f2da76010b_fixing_review_relationship.py  35399ccfd379_create_reviews_table.py  39b0783e070d_create_authors_table.py  724bd36925e2_insert_creator_name_column_in_author_.py  b9546b1721de_create_books_table.py  c2fdef741180_update_relationship_beetwen_user_and_.py
src/: app.py  database.db  email_handler.py  exceptions.py  rate_limiter.py  security.py  settings.py  types.py
src/database/: engine.py  session.py  utils.py
src/models/: authors.py  books.py  reviews.py  users.py
src/routers/: auth.py  authors.py  books.py  users.py
src/schemas/: schemas.py
src/tests/: conftest.py  test_auth.py  test_authors.py  test_books.py  test_users.py
